@@ -1,6 +1,6 @@
 Package: lme4
-Version: 0.4-3
-Date: 2003/09/30
+Version: 0.4-4
+Date: 2003/10/14
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu>, and
         Saikat DebRoy <saikat@stat.wisc.edu>
