@@ -2,7 +2,7 @@
  * @file   reStruct.c
  * @author Saikat DebRoy <saikat@stat.wisc.edu>
  * @author Douglas Bates <bates@stat.wisc.edu>
- * @date   $Date: 2003/09/25 20:56:18 $
+ * @date   $Date: 2003/09/30 16:27:39 $
  * 
  * @brief  functions for handling reStruct objects.
  * 
